@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
'hide methods

title Domain Model USEI02 - Simulator Without Priority


class Simulator {
    itemList
    machineList
    addOperationToQueue()
    createQueues()
    updateMachines()
    printQueue()
    printMachineStatus()
    assignItemToMachine()
}

class Item {
    itemID : ID
    operationList : Qeueu<Operation>
    currentOperation: Operation
    getNextOperation()
    getCurrentOperation()
}

class PriorityEnum{
    high
    normal
    low
}



class Operation {
    operationName : String
    duration : float
}

class Machine{
    idMachine : ID
    operation : Operation
    proccessingSpeed : float
    available : boolean
    timeLeftToFinish: float
    currentProcessingItem : Item
    processItem(Item item)
    updateMachine()
    resetMachine()
    printStatus()

}

class OperationQueue{
    operation : Operation
    itemList : Queue<Item>
    priority : boolean
    getOperation()
    addItemToQueue(Item item)
    checkOperation(Item item)
    getNextItem()
    isEmpty()

}

Item "1" -- "0..*" Operation : has >
Machine "1" - "         1" Operation: execute >
Item "1" -- "1" PriorityEnum : has >
'Simulator "1" -- "*" Operation : do >
Simulator "1" -- "1" OperationQueue: has >
Simulator "1" -- "1..*" Machine : has >
OperationQueue "1" -- "1..*" Item
@enduml